--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Project Javascript Contact Console</title>
-</head>
-<body>
-    <h1>Project Javascript Contact Console</h1>
-
-    <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Contacts</title>
+  </head>
+  <body>
+    <ul>
+      <li><a href="simple/index.html">simple</a></li>
+      <li><a href="complex/index.html">complex</a></li>
+    </ul>
+  </body>
 </html>
